syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package net.proto;

option java_multiple_files = true;
option java_package = "dev.proto";

service AuthGrpcService {

  rpc CreateUser (CreateUserRequest) returns (UserProto) {
      option (google.api.http) = {
          post: "/api/v1/users"
          body: "*"
      };
  }
  rpc UpdateUser (UpdateUserRequest) returns (UserProto) {
      option (google.api.http) = {
          post: "/api/v1/users/{userId}"
          body: "*"
      };
  }
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
      option (google.api.http) = { delete: "/api/v1/users/{userId}" };
  }
  rpc ListUsers (google.protobuf.Empty) returns (ListUsersResponse) {
      option (google.api.http) = { get: "/api/v1/users" };
  }
  rpc ListUsersPaginated (PaginationRequest) returns (ListUsersResponse) {
      option (google.api.http) = { get: "/api/v1/users" };
  }
  rpc GetUser (GetUserRequest) returns (UserProto) {
      option (google.api.http) = { get: "/api/v1/users/{userId}" };
  }
  rpc DisableUser (DisableUserRequest) returns (DisableUserResponse) {
      option (google.api.http) = { 
          post: "/api/v1/users/disable/{email}"
          body: "*" 
      };
  }
  rpc EnableUser (EnableUserRequest) returns (EnableUserResponse) {
      option (google.api.http) = { 
          post: "/api/v1/users/enable/{email}" 
          body: "*"
      };
  }
}

message UserProto {
  int64 id = 1;
  string name = 2;
  string lastname = 3; 
  string email = 4;
  string password = 5;
  string role = 6;
}

message CreateUserRequest { 
  string name = 1;
  string lastname = 2; 
  string email = 3;
  string password = 4;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string lastname = 3; 
  string email = 4;
  string password = 5;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  bool result = 1;
}

message ListUsersResponse {
  repeated UserProto users = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message PaginationRequest {
  int32 page = 1;
  int32 size = 2;
  string sortBy = 3;
  string sortDir = 4;
}

message DisableUserRequest {
  string email = 1;
}

message DisableUserResponse {
  bool result = 1;
}

message EnableUserRequest {
  string email = 1;
}

message EnableUserResponse {
  bool result = 1;
}

service UserAppGrpcCommandService {

  rpc CreateUser (CreateUserAppRequest) returns (UserAppCreatedResponse) {
      option (google.api.http) = {
          post: "/api/v1/usersapp"
          body: "*"
      };
  }
}

message CreateUserAppRequest { 
  string email = 1;
  string name = 2; 
  string lastname = 3;
}

message UserAppCreatedResponse {
  bool result = 1;
}


